# gooroom-notice-applet

./: Makefile.am  README.md  configure.ac
data/: Makefile.am  kr.gooroom.NoticeApplet.panel-applet.in.in
data/theme/: gooroom-notice-applet.css
data/widget/: gooroom-notice-dialog.ui
debian/: changelog  control  copyright  rules
icons/22x22/status/: Makefile.am
icons/scalable/apps/: Makefile.am
po/: POTFILES.in  POTFILES.skip  en_GB.po  ko.po
src/: Makefile.am  gooroom-notice-applet.c  gooroom-notice-applet.h  gooroom-notice-module.c  gresource.xml
